--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-aprobar-solicitud/form-aprobar-solicitud.component.html
@@ -1,6 +1,6 @@
 <section class="container text-center" *ngIf="contrato !== undefined && menusIdPath !== undefined && listaTipoObservacionSolicitudes !== undefined">
     <div class="text-right">
-        <a routerLink="/aprobarSolicitudesPago" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/verificarSolicitudPago" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
