--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/registrar-actualiz-polizas-garantias/registrar-actualiz-polizas-garantias.component.html
@@ -63,21 +63,24 @@
         <div class="table-responsive">
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                 <ng-container matColumnDef="numContrato">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrrato </th>
                     <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numContrato }}</b> </td>
                 </ng-container>
                 <ng-container matColumnDef="tipoContrato">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
-                    <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.tipoContrato }}</b> </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de contrato </th>
+                    <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.tipoContrato }}</em> </td>
                 </ng-container>
                 <ng-container matColumnDef="contratista">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
-                    <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.contratista }}</b> </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
+                    <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.contratista }}</em> </td>
                 </ng-container>
                 <ng-container matColumnDef="gestion">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                     <td mat-cell *matCellDef="let element" align="center">
-                        */*/*/
+                        <button mat-raised-button color="accent" class="btn-table"
+                            (click)="this.actualizarPoliza(element.gestion)">
+                            Actualizar póliza
+                        </button>
                     </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -86,4 +89,5 @@
             <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
         </div>
     </div>
+    <app-tabla-general-rapg></app-tabla-general-rapg>
 </section>
