--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -49,7 +49,7 @@
                     Razón y tipo de actualización
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            1
+            <app-razon-tipo-actualizacion-rapg></app-razon-tipo-actualizacion-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -59,7 +59,7 @@
                     Vigencias y valor
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            2
+            <app-vigencias-valor-rapg></app-vigencias-valor-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -69,7 +69,7 @@
                     Observaciones especificas
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            3
+            <app-observaciones-especificas-rapg></app-observaciones-especificas-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -79,7 +79,7 @@
                     Lista de chequeo
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            4
+            <app-lista-chequeo-rapg></app-lista-chequeo-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
@@ -89,7 +89,7 @@
                     Revisión y aprobación
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            5
+            <app-revision-aprobacion-rapg></app-revision-aprobacion-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <div style="margin-top: 1em;">
