--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/tabla-form-solicitud-multiple/tabla-form-solicitud-multiple.component.html
@@ -31,7 +31,24 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del proyecto </th>
       <td mat-cell *matCellDef="let element">
         <mat-form-field class="select-width">
-          <mat-select required [(ngModel)]="element.proyecto.estadoProyectoCodigo" (selectionChange)="onChangeEstado()">
+          <!-- obra -->
+          <mat-select 
+                      required 
+                      [(ngModel)]="element.proyecto.estadoProyectoObraCodigo" 
+                      (selectionChange)="onChangeEstado()"
+                      *ngIf="contratacion.tipoSolicitudCodigo === '1'"
+                      >
+            <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
+              {{ estado.nombre }}
+            </mat-option>
+          </mat-select>
+          <!-- interventoria -->
+          <mat-select 
+                      required 
+                      [(ngModel)]="element.proyecto.estadoProyectoInterventoriaCodigo" 
+                      (selectionChange)="onChangeEstado()"
+                      *ngIf="contratacion.tipoSolicitudCodigo === '2'"
+                      >
             <mat-option *ngFor="let estado of listaEstados" [value]="estado.codigo">
               {{ estado.nombre }}
             </mat-option>
@@ -48,11 +65,25 @@
                             element.contratacionId, 
                             element.contratacionObservacion, 
                             element.proyecto.proyectoId,
-                            element.proyecto.estadoProyectoCodigo
+                            element.proyecto.estadoProyectoObraCodigo,
+                            0
                             );"
-                    
+                            *ngIf="contratacion.tipoSolicitudCodigo === '1'"
           mat-raised-button color="accent" class="btn-table"
-          [disabled]="element.proyecto.estadoProyectoCodigo == null || element.proyecto.estadoProyectoCodigo == estadosProyecto.AprobadoComiteTecnico">
+          [disabled]="element.proyecto.estadoProyectoObraCodigo == null || element.proyecto.estadoProyectoObraCodigo == estadosProyecto.AprobadoComiteTecnico">
+          Observaciones
+        </button>
+        <button mat-raised-button type="button" 
+        (click)="Observaciones(element.contratacionProyectoId, 
+                            element.contratacionId, 
+                            element.contratacionObservacion, 
+                            element.proyecto.proyectoId,
+                            0,
+                            element.proyecto.estadoProyectoInterventoriaCodigo
+                            );"
+                            *ngIf="contratacion.tipoSolicitudCodigo === '2'"
+          mat-raised-button color="accent" class="btn-table"
+          [disabled]="element.proyecto.estadoProyectoInterventoriaCodigo == null || element.proyecto.estadoProyectoInterventoriaCodigo == estadosProyecto.AprobadoComiteTecnico">
           Observaciones
         </button>
       </td>
