--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -33,9 +33,8 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
     </div>
-    <div class="text-center">
+    <div class="text-center mt-2em">
         <p class="info-container">
             <span class="info-text sin-diligenciar">Sin diligenciar</span>
             <span class="info-text en-proceso">En proceso</span>
