--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -136,16 +136,12 @@
                       maxlength="3"
                       min="1"
                       max="999"
+                      #cantidadHvRequeridas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                       formControlName="cantidadHvRequeridas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvRequeridas')"
-                      [class.invalid]="
-                        perfil.get('cantidadHvRequeridas').value.length > 0
-                          ? perfil.get('cantidadHvRequeridas').markAsUntouched()
-                          : perfil.get('cantidadHvRequeridas').markAsTouched()
-                      "
                     />
                   </mat-form-field>
                   <span
@@ -154,7 +150,7 @@
                     matTooltip="Campo numérico"
                     matTooltipClass="info-tooltip"
                   >
-                    {{ 3 - perfil.get('cantidadHvRequeridas').value.toString().length }}
+                    {{ 3 - cantidadHvRequeridas.value.length }}
                   </span>
                   <span class="icon-incompleto">
                     <img
@@ -198,16 +194,12 @@
                       maxlength="3"
                       min="1"
                       max="999"
+                      #cantidadHvRecibidas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                       formControlName="cantidadHvRecibidas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvRecibidas')"
-                      [class.invalid]="
-                        perfil.get('cantidadHvRecibidas').value.length > 0
-                          ? perfil.get('cantidadHvRecibidas').markAsUntouched()
-                          : perfil.get('cantidadHvRecibidas').markAsTouched()
-                      "
                     />
                   </mat-form-field>
                   <span
@@ -216,7 +208,7 @@
                     matTooltip="Campo numérico"
                     matTooltipClass="info-tooltip"
                   >
-                    {{ 3 - perfil.get('cantidadHvRecibidas').value.toString().length }}
+                    {{ 3 - cantidadHvRecibidas.value.length }}
                   </span>
                   <span class="icon-incompleto">
                     <img
@@ -260,16 +252,12 @@
                       maxlength="3"
                       min="1"
                       max="999"
+                      #cantidadHvAprobadas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                       formControlName="cantidadHvAprobadas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvAprobadas')"
-                      [class.invalid]="
-                        perfil.get('cantidadHvAprobadas').value.length > 0
-                          ? perfil.get('cantidadHvAprobadas').markAsUntouched()
-                          : perfil.get('cantidadHvAprobadas').markAsTouched()
-                      "
                     />
                   </mat-form-field>
                   <span
@@ -278,7 +266,7 @@
                     matTooltip="Campo numérico"
                     matTooltipClass="info-tooltip"
                   >
-                    {{ 3 - perfil.get('cantidadHvAprobadas').value.toString().length }}
+                    {{ 3 - cantidadHvAprobadas.value.length }}
                   </span>
                   <span class="icon-incompleto">
                     <img
@@ -331,11 +319,6 @@
                           perfil.get('cantidadHvRecibidas').value,
                           i
                         )
-                      "
-                      [class.invalid]="
-                        perfil.get('fechaAprobacion').value !== null
-                          ? perfil.get('fechaAprobacion').markAsUntouched()
-                          : perfil.get('fechaAprobacion').markAsTouched()
                       "
                     />
                     <mat-datepicker #fechaAprobacion></mat-datepicker>
