--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
@@ -274,4 +274,4 @@
   </mat-card-content>
 </mat-card>
 
-<app-tabla-observaciones *ngIf="data.informe.tieneObservacionSupervisor && anexos.informeFinalInterventoriaObservaciones != null" [data]="anexos.informeFinalInterventoriaObservaciones"></app-tabla-observaciones>
+<app-tabla-observaciones *ngIf="data.informe.tieneObservacionSupervisor && anexos != null" [data]="anexos"></app-tabla-observaciones>
