--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/form-observaciones-recibo-satisfaccion/form-observaciones-recibo-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/form-observaciones-recibo-satisfaccion/form-observaciones-recibo-satisfaccion.component.html
@@ -3,14 +3,14 @@
     <div class="col-md-12">
       <div class="row justify-content-center align-items-center" style="width: 100%">
         <div class="pr-1">
-          <label class="label-left" for="tieneObservacionesValidacion"> ¿Tiene observaciones al recibo a satisfacción? </label>
+          <label class="label-left" for="tieneObservaciones"> ¿Tiene observaciones al recibo a satisfacción? </label>
         </div>
         <div>
-          <mat-radio-group class="radioInput" formControlName="tieneObservacionesValidacion">
-            <mat-radio-button [value]="true" [checked]="observaciones.get('tieneObservacionesValidacion').value === true">
+          <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
+            <mat-radio-button [value]="true" [checked]="observaciones.get('tieneObservaciones').value === true">
               Sí
             </mat-radio-button>
-            <mat-radio-button [value]="false" [checked]="observaciones.get('tieneObservacionesValidacion').value === false">
+            <mat-radio-button [value]="false" [checked]="observaciones.get('tieneObservaciones').value === false">
               No
             </mat-radio-button>
           </mat-radio-group>
@@ -26,8 +26,8 @@
           matTooltip="Debe ingresar la información en el campo para continuar"
           matTooltipClass="info-tooltip"
           *ngIf="
-            (observaciones.get('tieneObservacionesValidacion').invalid && observaciones.get('tieneObservacionesValidacion').touched) ||
-            (observaciones.get('tieneObservacionesValidacion').invalid && estaEditando)
+            (observaciones.get('tieneObservaciones').invalid && observaciones.get('tieneObservaciones').touched) ||
+            (observaciones.get('tieneObservaciones').invalid && estaEditando)
           "
         />
       </span>
@@ -35,22 +35,22 @@
   </div>
   <div
     class="d-flex mt-2em align-items-center animatedDown"
-    *ngIf="observaciones.value.tieneObservacionesValidacion == true"
+    *ngIf="observaciones.value.tieneObservaciones == true"
     align="left"
   >
     <div
       class="text-area-quill"
       [class.color-secondaryColor]="
-        (observaciones.get('observacionesValidacion').invalid && observaciones.get('observacionesValidacion').touched) ||
-        (observaciones.get('observacionesValidacion').invalid && estaEditando)
+        (observaciones.get('observaciones').invalid && observaciones.get('observaciones').touched) ||
+        (observaciones.get('observaciones').invalid && estaEditando)
       "
     >
       <label
         class="text-area-quill--label align-left-label"
         [class.colorMainColor]="
           !(
-            (observaciones.get('observacionesValidacion').invalid && observaciones.get('observacionesValidacion').touched) ||
-            (observaciones.get('observacionesValidacion').invalid && estaEditando)
+            (observaciones.get('observaciones').invalid && observaciones.get('observaciones').touched) ||
+            (observaciones.get('observaciones').invalid && estaEditando)
           )
         "
       >
@@ -61,16 +61,16 @@
         [styles]="editorStyle"
         [modules]="config"
         (onContentChanged)="maxLength($event, 1000)"
-        formControlName="observacionesValidacion"
+        formControlName="observaciones"
         #obsGestionSst
         required
       >
       </quill-editor>
     </div>
-    <span class="contador miles" *ngIf="observaciones.get('observacionesValidacion').value">
+    <span class="contador miles" *ngIf="observaciones.get('observaciones').value">
       {{ 1000 - textoLimpio(obsGestionSst.quillEditor, 1000) }}
     </span>
-    <span class="contador miles" *ngIf="!observaciones.get('observacionesValidacion').value"> 1000 </span>
+    <span class="contador miles" *ngIf="!observaciones.get('observaciones').value"> 1000 </span>
     <span class="icon-incompleto">
       <img
         class="icon-incompleto--img"
@@ -80,8 +80,8 @@
         matTooltip="Debe ingresar la información en el campo para continuar"
         matTooltipClass="info-tooltip"
         *ngIf="
-          (observaciones.get('observacionesValidacion').invalid && observaciones.get('observacionesValidacion').touched) ||
-          (observaciones.get('observacionesValidacion').invalid && estaEditando)
+          (observaciones.get('observaciones').invalid && observaciones.get('observaciones').touched) ||
+          (observaciones.get('observaciones').invalid && estaEditando)
         "
       />
     </span>
@@ -93,9 +93,9 @@
       class="btn-guardar"
       type="submit"
       [disabled]="
-        observaciones.get('tieneObservacionesValidacion').value === null ||
-        observaciones.get('tieneObservacionesValidacion').value === undefined ||
-        (observaciones.get('tieneObservacionesValidacion').value === true && observaciones.get('observacionesValidacion').invalid)
+        observaciones.get('tieneObservaciones').value === null ||
+        observaciones.get('tieneObservaciones').value === undefined ||
+        (observaciones.get('tieneObservaciones').value === true && observaciones.get('observaciones').invalid)
       "
     >
       <img src="assets/img/icon/guardar.svg" alt="Regresar" />
