--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -28,7 +28,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
                 <td mat-cell *matCellDef="let element">
                   <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
-                    <b>{{ element.informeFinalListaChequeoId }}</b>
+                    <b>{{ element.informeFinalListaChequeo.posicion }}</b>
                   </span>
                 </td>
               </ng-container>
