--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final/tabla-informe-final.component.html
@@ -72,8 +72,8 @@
       <td mat-cell *matCellDef="let element">
         <span
           class="info-text d-block m-0"
-          [class.sin-diligenciar]="element.registroCompletoValidacion === 'Incompleto'"
-          [class.completo]="element.registroCompletoValidacion === true"
+          [class.sin-diligenciar]="!element.registroCompletoValidacion || element.registroCompletoValidacion == null"
+          [class.completo]="element.registroCompletoValidacion"
         ></span>
         <span
         *ngIf="element.registroCompletoValidacion"
@@ -81,7 +81,7 @@
          Completo
       </span>
       <span
-      *ngIf="!element.registroCompletoValidacion"
+      *ngIf="!element.registroCompletoValidacion || element.registroCompletoValidacion == null"
        >
        Incompleto
     </span>
