ajuste estados proyectos comite fiduciario

--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/crear-acta/crear-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/crear-acta/crear-acta.component.html
@@ -68,6 +68,7 @@
                         (validar)="habilitar($event)"
                         [style.pointer-events]="getStyle()"
                         [fechaComite]="objetoComiteTecnico.fechaOrdenDia"
+                        [EstadosolicitudActa]="objetoComiteTecnico.estadoActaCodigo"
                     >
 
                     </app-form-solicitud>
