--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/observaciones-especificas-rapg/observaciones-especificas-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/observaciones-especificas-rapg/observaciones-especificas-rapg.component.html
@@ -1,1 +1,62 @@
-<p>observaciones-especificas-rapg works!</p>
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+    <div class="row mtop justCenter">
+        <div class="col-md-6">
+            <label class="label-left" for="tieneObservaciones" class="label-left" [class.color-secondaryColor]="
+      (addressForm.get('tieneObservaciones').invalid &&
+        addressForm.get('tieneObservaciones').touched) ||
+      (addressForm.get('tieneObservaciones').invalid && estaEditando)
+    ">¿Tiene observaciones especificas de la actualización?</label>
+        </div>
+        <div class="col-md-2">
+            <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+                formControlName="tieneObservaciones">
+                <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+                <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+            </mat-radio-group>
+            <span class="required-form-group" style="margin-left: 1px;">*</span>
+        </div>
+        <span class="icon-incompleto">
+            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip" *ngIf="
+              (addressForm.get('tieneObservaciones').invalid &&
+                addressForm.get('tieneObservaciones').touched) ||
+              (addressForm.get('tieneObservaciones').invalid && estaEditando)
+            " />
+        </span>
+    </div>
+    <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
+        <div class="text-area-quill izqTitle helperWidthText" [class.color-secondaryColor]="
+            (addressForm.get('observacionesEspecificas').invalid && addressForm.get('observacionesEspecificas').touched) ||
+            (addressForm.get('observacionesEspecificas').invalid && estaEditando)
+          ">
+            <label for="observacionesEspecificas" class="text-area-quill--label" style="font-size: 16px" [ngStyle]="{ color: (addressForm.get('observacionesEspecificas').invalid && addressForm.get('observacionesEspecificas').touched) ||
+            (addressForm.get('observacionesEspecificas').invalid && estaEditando) ? '#d21e18' : '#174193' }">
+                Observaciones especificas de la actualización
+            </label>
+            <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                (onContentChanged)="maxLength($event, 1000)" formControlName="observacionesEspecificas"
+                #observacionesEspecificas></quill-editor>
+        </div>
+        <span class="contador miles" *ngIf="addressForm.get('observacionesEspecificas').value">
+            {{ 1000 - textoLimpio(observacionesEspecificas.quillEditor, 1000) }}
+        </span>
+        <span class="contador miles"
+            *ngIf="addressForm.get('observacionesEspecificas').value === '' || addressForm.get('observacionesEspecificas').value === null">
+            1000
+        </span>
+        <span class="icon-incompleto">
+            <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip" *ngIf="
+              (addressForm.get('observacionesEspecificas').invalid && addressForm.get('observacionesEspecificas').touched) ||
+              (addressForm.get('observacionesEspecificas').invalid && estaEditando)
+            " />
+        </span>
+    </div>
+    <div class="text-center mb-2em mt-2em">
+        <button mat-button color="warn" class="btn-guardar" type="submit">
+            <img src="assets/img/icon/guardar.svg" alt="Regresar">
+        </button>
+    </div>
+</form>
