--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/validar-informe/validar-informe.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/validar-informe/validar-informe.component.html
@@ -18,5 +18,6 @@
   </div>
 
   <app-datos-del-proyecto></app-datos-del-proyecto>
+  <app-form-observaciones-recibo-satisfaccion></app-form-observaciones-recibo-satisfaccion>
   <app-tabla-informe-final-anexos></app-tabla-informe-final-anexos>
 </section>
